--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "npm": "5.0.3"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run start\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^3.5.1",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "mongoose": "^4.13.8",
+    "node-cors": "^1.0.0",
     "nodemon": "^1.14.3",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
